# byggern

./: .gitignore  .minirc.node1  .minirc.node2  CMakeLists.txt  Doxyfile  README.md  main.cpp  run_cmake.sh  usb_permission_setup.sh
docs/: index.html
docs/html/: _solenoid_8h_source.html  _test_stream_8h_source.html  _u_a_r_t_8h_source.html  adc_8h_source.html  adc__internal_8h_source.html  annotated.html  annotated.js  annotated_dup.js  can_8h_source.html  class_a_d_c-members.html  class_a_d_c.html  class_a_d_c.js  class_a_d_c__internal-members.html  class_a_d_c__internal.html  class_a_d_c__internal.js  class_c_a_n-members.html  class_c_a_n.html  class_c_a_n.js  class_d_a_c-members.html  class_d_a_c.html  class_d_a_c.js  class_encoder-members.html  class_encoder.html  class_encoder.js  class_highscore_1_1_highscore-members.html  class_highscore_1_1_highscore.html  class_highscore_1_1_highscore.js  class_i2_c-members.html  class_i2_c.html  class_i2_c.js  class_i_r___detector-members.html  class_i_r___detector.html  class_i_r___detector.js  class_i_r_detector-members.html  class_i_r_detector.html  class_i_r_detector.js  class_joystick-members.html  class_joystick.html  class_joystick.js  class_m_c_p2515-members.html  (+360 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  files_0.js  files_1.js  files_3.js  functions_0.js  (+42 more)
docs/latex/: annotated.tex  class_a_d_c.eps  class_a_d_c.tex  class_a_d_c__internal.eps  class_a_d_c__internal.tex  class_c_a_n.eps  class_c_a_n.tex  class_d_a_c.tex  class_encoder.tex  class_highscore_1_1_highscore.tex  class_i2_c.eps  class_i2_c.tex  class_i_r___detector.tex  class_i_r_detector.tex  class_joystick.tex  class_m_c_p2515.eps  class_m_c_p2515.tex  class_menu_1_1_controller.tex  class_motor.tex  class_o_l_e_d.eps  class_o_l_e_d.tex  class_o_l_e_d___s_c_p.eps  class_o_l_e_d___s_c_p.tex  class_o_l_e_d__memory.eps  class_o_l_e_d__memory.tex  class_s_c_p.tex  class_s_o_c_k_e_t.eps  class_s_o_c_k_e_t.tex  class_s_p_i_1_1_s_p_i.eps  class_s_p_i_1_1_s_p_i.tex  class_s_p_i___n_1_1_s_p_i.eps  class_s_p_i___n_1_1_s_p_i.tex  class_score_service.tex  class_servo.tex  class_socket.eps  class_socket.tex  class_solenoid.tex  class_state_machine.tex  class_stream.eps  class_stream.tex  (+121 more)
extra/android/Scoreboard/app/: build.gradle
extra/android/Scoreboard/app/src/androidTest/java/baugen/scoreboard/: ExampleInstrumentedTest.java
extra/android/Scoreboard/app/src/main/: AndroidManifest.xml
extra/android/Scoreboard/app/src/main/java/baugen/scoreboard/: frontpage.java
extra/android/Scoreboard/app/src/main/res/layout/: activity_frontpage.xml
extra/android/Scoreboard/app/src/main/res/values/: strings.xml
extra/android/Scoreboard/app/src/test/java/baugen/scoreboard/: ExampleUnitTest.java
extra/nordic/Phonescore/: main.cpp  score_service.h
gal/: vhdl
include/: init.h  test_menu.h
lib/SCP/: scp.cpp  scp.h
lib/TestStream/: TestStream.cpp  TestStream.h
lib/adc/: adc.cpp  adc.h
lib/adc_internal/: adc_internal.cpp  adc_internal.h
lib/can/: can.cpp  can.h
lib/dac/: dac.cpp  dac.h
lib/encoder/: encoder.cpp  encoder.h
lib/ex1/: ex1.cpp  ex1.h
lib/highscore/: highscore.cpp  highscore.h
lib/i2c/: i2c.cpp  i2c.h  pins.h
lib/ir_detector/: ir_detector.cpp  ir_detector.h
lib/joystick/: direction.h  joystick.cpp  joystick.h
lib/mcp2515/: mcp2515.cpp  mcp2515.h  mcp2515_regisers.h
lib/menu/: menu.cpp  menu.h
lib/motor/: motor.cpp  motor.h
lib/oled/: oled.cpp  oled.h
lib/oled_can/: oled_can.cpp  oled_can.h
lib/oled_memory/: oled_memory.cpp  oled_memory.h
lib/oled_scp/: oled_scp.cpp  oled_scp.h
lib/scp/: commands.h  scp.cpp  scp.h
lib/servo/: servo.cpp  servo.h
lib/socket/: socket.cpp  socket.h
lib/software_interrupt/: software_interrupt.cpp  software_interrupt.h
lib/solenoid/: solenoid.cpp  solenoid.h
lib/spi/: pins.h  spi.cpp  spi.h
lib/spi_sync/: spi_sync.cpp  spi_sync.h
lib/state_machine/: state_machine.cpp  state_machine.h
lib/stream/: stream.cpp  stream.h
lib/testStream/: testStream.cpp  testStream.h
lib/timer/: timer.cpp  timer.h
lib/uart/: UART.cpp  UART.h  pins.h  uart.cpp  uart.h
lib/utilities/: fonts.cpp  fonts.h  memory.cpp  memory.h  new.cpp  new.h  printf.cpp  printf.h  utilities.h
node1/: CMakeLists.txt  main.cpp  state_machine.cpp
node1/include/: init.h  state_machine.h
node1/src/: init.cpp  main.cpp  state_machine.cpp
node2/: CMakeLists.txt  main.cpp
node2/include/: init.h  state_machine.h
node2/src/: init.cpp  main.cpp  state_machine.cpp
schematics/: CustomComponents.PcbLib  CustomComponents.SchLib  _saved_byggern.sch  byggern-cache.lib  byggern.PrjPCB  byggern.bak  byggern.pro  byggern.sch  main.SchDoc
schematics/__Previews/: main.SchDocPreview
scripts/: minicom_create_configuration_symlinks.sh  usb_permission_setup.sh
src/: init.cpp  main.c  main.cpp  main_BACKUP_16633.cpp
